--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./indexstyles.css" />
+    <link rel="stylesheet" href="./normalize.css" />
     <title>Document</title>
   </head>
   <body>
-    xd
+    <div class="header">
+      <a href="#">Home</a>
+      <a href="#">Messages</a>
+      <a href="#">Profile</a>
+      <a href="#">Blogs</a>
+    </div>
   </body>
 </html>
