--- a/index.html
+++ b/index.html
@@ -10,10 +10,26 @@
   </head>
   <body>
     <div class="header">
-      <a href="#">Home</a>
+      <a href="#" class="active">Home</a>
       <a href="#">Messages</a>
       <a href="#">Profile</a>
       <a href="#">Blogs</a>
+    </div>
+    <div class="posts">
+      <div>
+        <div class="postheader">
+          <img src="./profile.jpg" alt="" />
+          <div>meno</div>
+        </div>
+        <div class="postimage">
+          <img src="./profile.jpg" alt="" />
+        </div>
+        <div class="postfooter">
+          <div>srdce</div>
+          <div>message</div>
+          <div>285 Páči sa mi to</div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
