--- a/twa-project-master/blog.html
+++ b/twa-project-master/blog.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blogs</title>
     <link rel="stylesheet" href="styles/blogstyles.css">
+    <link rel="stylesheet" href="styles/normalize.css">
 </head>
 <body>
     <div class="content">
@@ -13,12 +14,44 @@
             <div class="heading">
                 <h2 class="blogTitle">Blog 1</h2>
             <div class="icons">
-
+                <img class="icon" src="img/heart-svgrepo-com.svg" alt="like">
+                <img class="icon" src="img/bookmark-svgrepo-com.svg" alt="bookmark">
+                <img class="icon" src="img/send-svgrepo-com.svg" alt="send">
             </div>
         </div>
-            
+        <hr>
+            <p class="blogtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, earum. Exercitationem asperiores odio repellendus repudiandae voluptatem veritatis, animi unde quibusdam obcaecati quod hic nobis nemo ab, sequi nostrum, minus ipsa.</p>
+        </div>
+        <div class="blog">
+            <div class="heading">
+                <h2 class="blogTitle">Blog 2</h2>
+            <div class="icons">
+                <img class="icon" src="img/heart-svgrepo-com.svg" alt="like">
+                <img class="icon" src="img/bookmark-svgrepo-com.svg" alt="bookmark">
+                <img class="icon" src="img/send-svgrepo-com.svg" alt="send">
+            </div>
+        </div>
+        <hr>
             <p class="blogtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, earum. Exercitationem asperiores odio repellendus repudiandae voluptatem veritatis, animi unde quibusdam obcaecati quod hic nobis nemo ab, sequi nostrum, minus ipsa.</p>
         </div>
     </div>
+    <div class="recommended_profiles"></div>
+    <div>
+        <div class="recommended_profiles_options">
+            <p>Návrhy pre vás</p>
+            <p>Zobraziť všetko</p>
+        </div>
+        <div>
+            <div>
+                <img src="img/profile_1.jpg">
+                <p>Louis vutton</p>
+            </div>
+            <div>
+                <img src="img/profile_2.jpg">
+                <p>Louis vutton</p>
+            </div>
+        </div>
+    </div> 
+    
 </body>
 </html>
