--- a/twa-project-master/index.html
+++ b/twa-project-master/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/indexstyles.css" />
+    <link rel="stylesheet" href="./styles/normalize.css" />
     <title>Document</title>
   </head>
   <body>
-    xd
+    <div class="header">
+      <a href="#" class="active">Home</a>
+      <a href="#">Messages</a>
+      <a href="#">Profile</a>
+      <a href="#">Blogs</a>
+    </div>
+    <div class="posts">
+      <div>
+        <div class="postheader">
+          <img src="./profile.jpg" alt="" />
+          <div>meno</div>
+        </div>
+        <div class="postimage">
+          <img src="./profile.jpg" alt="" />
+        </div>
+        <div class="postfooter">
+          <div>srdce</div>
+          <div>message</div>
+          <div>285 Páči sa mi to</div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
