--- a/blog.html
+++ b/blog.html
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blogs</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="styles/shared.css">
     <link rel="stylesheet" href="styles/blogstyles.css">
     <link rel="stylesheet" href="styles/normalize.css">
 </head>
 <body>
     <div class="header">
         <a href="index.html">Home</a>
-        <a href="#">Messages</a>
+        <a href="messages.html">Messages</a>
         <a href="profile.html">Profile</a>
-        <a href="blog.html" class="active">Blogs</a>
+        <a href="#" class="active">Blogs</a>
     </div>
     <div class="wrapper">
         <div class="content">
