--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="styles/shared.css">
     <link rel="stylesheet" href="./styles/indexstyles.css" />
     <link rel="stylesheet" href="./styles/normalize.css" />
-    <title>Document</title>
+    <title>Home</title>
   </head>
   <body>
     <div class="header">
       <a href="#" class="active">Home</a>
-      <a href="#">Messages</a>
+      <a href="messages.html">Messages</a>
       <a href="profile.html">Profile</a>
       <a href="blog.html">Blogs</a>
     </div>
