--- a/profile.html
+++ b/profile.html
@@ -5,14 +5,17 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Profile</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <link rel="stylesheet" href="styles/shared.css">
   <link rel="stylesheet" type="text/css" href="./styles/profilestyles.css" />
+  <link rel="stylesheet" href="./styles/normalize.css" />
 </head>
 
 <body>
   <div class="header">
     <a href="index.html">Home</a>
-    <a href="#">Messages</a>
+    <a href="messages.html">Messages</a>
     <a href="#" class="active" >Profile</a>
     <a href="blog.html">Blogs</a>
   </div>
